Some enhancement of UI for both index and admin page.

--- a/src/admin/header/style.less
+++ b/src/admin/header/style.less
@@ -4,6 +4,10 @@
 //      background-color: @header-ext-background-color;
         color: white;
         height: 30px;
+        .indicator {
+            font-size: 12px;
+            margin: 6.5px 20px;
+        }
         .back-main{
             margin-right: 36px;
             margin-top: 5px;
@@ -25,20 +29,17 @@
     .header-search{
         background: url("../../images/web_topbar_gray.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
         height: 48px;
-        
+        width: 100%;
+        float: left;
         .logo{
             height: 32px;
             width: 147px;
-            position: relative;
-            left: 20px;
-            top: 8px;
+            margin: 8px 0 0 20px;
             background: url("../../images/logo.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
         }
         
         .search{
-            position: relative;
-            left: 153px;
-            top: 8px;
+            margin: 7px 0 7px 240px;
             width: 450px;
             .search-text{
                 background: url("../../images/search_icon.png") no-repeat scroll 10px 10px white;
