--- a/src/app/trash/template.html
+++ b/src/app/trash/template.html
@@ -16,7 +16,7 @@
       <input type="checkbox" ng-click = "selectedAllswitch()" ng-model = "selectedAll"/>
     </div>
     <div class="title-name col">
-      <span>名称</span>
+      <span>文件名</span>
     </div>
     <div class="title-state col">
       <span>删除时间</span>           
