--- a/src/app/contacts/template.html
+++ b/src/app/contacts/template.html
@@ -8,11 +8,11 @@
     </div>
 
     <table class="gridtable">
-        <tr>
+        <tr class="contact-title">
             <th width="150px">姓名</th><th width="150px">邮箱地址</th><th width="150px">手机号码</th><th width="70px">更多</th>
         </tr>
-        <tr ng-repeat="contact in contactList" ng-mouseover="displayContactAction();">
-            <td><img ng-src="{{contact.avatar}}" class="img-avatar"/>&nbsp;{{contact.contact_name}}</td>
+        <tr class="contact-item" ng-repeat="contact in contactList" ng-mouseover="displayContactAction();">
+            <td class="contact-name"><img ng-src="{{contact.avatar}}" class="img-avatar"/>&nbsp;{{contact.contact_name}}</td>
             <td>{{contact.contact_email}}</td>
             <td>{{contact.phone}}</td>
             <td>
