--- a/src/app/files/link-share/template.html
+++ b/src/app/files/link-share/template.html
@@ -24,11 +24,11 @@
         <input type="{{linkSharePasswordType}}" class="form-control" placeholder="输入访问密码" ng-model="linkSharePassword" ng-disabled="!linkSharePasswordShow">
       </div>
       <div class="col-sm-11 col-sm-offset-1">
-        <div class="checkbox">
+        <!-- <div class="checkbox">
           <label class="pull-left">
             <input type="checkbox" ng-click="changeLinkSharePasswordType()">
             显示密码 </label>
-        </div>
+        </div> -->
       </div>
     </div>
     <h5>链接权限</h5>
