--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -23,7 +23,7 @@
   .file-row{
     margin-right: 40px;
     height: 65px;
-    border-bottom: 1px solid #cfcfcf; 
+    border-bottom: 1px solid #E8E8E8; 
     overflow: hidden;
   }
   .file-row:hover{
@@ -83,6 +83,7 @@
      margin-right: 40px;
      border-bottom: 1px solid #afafaf;
      color: #676767;
+     font-weight: bold;
      .title-checkbox{
         width: 4%;
      }
@@ -292,6 +293,7 @@
       margin-bottom: 10px;
       color: #555;
       background-color: #E8ECF0;
+      
     }
     .dropdown-menu{
         li{
