--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -72,8 +72,8 @@
 	</div>
 	<div class="header-search" role="navigation">
 		<div class="logo pull-left"></div>
-		<div class="search pull-left">
-			<input type="text" placeholder="搜索文件或者文件夹" class="search-text form-control" ng-model = "searchFilesValue" ng-keydown = "searchByKeyDown($event,searchFilesValue)">
+		<div class="search">
+			<input type="text" placeholder="搜索文件或文件夹" class="search-text form-control" ng-model = "searchFilesValue" ng-keydown = "searchByKeyDown($event,searchFilesValue)">
 			<button class="search-button btn btn-default" ng-click = "searchByButton(searchFilesValue)">
 				搜索
 			</button>
