--- a/src/app/trash/style.less
+++ b/src/app/trash/style.less
@@ -16,7 +16,7 @@
   }
   .file-row{
     height: 65px;
-    border-bottom: 1px solid #cfcfcf; 
+    border-bottom: 1px solid #E8E8E8; 
     margin-right: 40px;
   }
   .file-row:hover{
@@ -76,6 +76,7 @@
      margin-right: 40px;
      border-bottom: 1px solid #afafaf;
      color: #676767;
+     font-weight: bold;
      .title-checkbox{
          padding: 8px;
      }
