--- a/src/app/upload-progress-dialog/style.less
+++ b/src/app/upload-progress-dialog/style.less
@@ -7,7 +7,7 @@
   width:495px;
   background:white;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
+  border-radius: 6px 6px 0 0;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 }
 
