--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -293,7 +293,10 @@
       margin-bottom: 10px;
       color: #555;
       background-color: #E8ECF0;
-      
+      a{
+        cursor: pointer;
+        text-decoration: none;
+      }
     }
     .dropdown-menu{
         li{
