The newest UI of Admin page

--- a/src/admin/overview/style.less
+++ b/src/admin/overview/style.less
@@ -3,10 +3,16 @@
   padding: 0 40px;
 
     .chart{
-      height: 49%;
+      height: 40%;
+      width: 30%;
+      margin: 3% 3% 0 0;
       // width: 600px;
+      border: 1px solid #E0E0E0;
+      background-color: #F0F0F0;
+      border-radius: 3px;
     }
     .down{
-      margin-top: 10px;
+      margin-top: 4%;
+      margin-bottom: 3%;
     }
 }
