--- a/src/admin/users/groups/editGroup/style.less
+++ b/src/admin/users/groups/editGroup/style.less
@@ -36,7 +36,10 @@
   }
 
   h4{
-    margin-top: 35px;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 16px;
   }
 
   .permission-checkbox{
