--- a/src/admin/global.less
+++ b/src/admin/global.less
@@ -32,3 +32,26 @@ html, body {
     right: 0;
     top: 0;
 }
+
+.main-bottom {
+    position: absolute;
+    bottom: 1px;
+    left: 260px;
+    right: 0;
+    height: 40px;
+    font-size: 12px;
+    color: #888;
+    border-top:1px solid #afafaf;
+    left: 0;
+    div{
+        float: right;
+        margin: 11.5px 40px;
+    }
+    :first-child{
+        float: left;
+    }
+}
+
+.division {
+    margin-top: 20px;
+}
