--- a/src/admin/users/externalUsers/editExternalUser/style.less
+++ b/src/admin/users/externalUsers/editExternalUser/style.less
@@ -35,7 +35,10 @@
   }
 
   h4{
-    margin-top: 35px;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 700;
   }
 
   .permission-checkbox{
