--- a/src/admin/users/groups/style.less
+++ b/src/admin/users/groups/style.less
@@ -6,34 +6,40 @@
   .buttonGroup{
       border-bottom: 1px solid #afafaf;
       margin-left: 40px;
+      margin-right: 40px;
       padding-bottom: 9px;
       padding-left: 57px;
       padding-top: 9px;
-      width: 90%;
+      padding: 9px 57px;
   }
   .groupGridStyle {
-    bottom: 40px;
+    bottom: 0;
     left: 0;
     position: absolute;
     right: 0;
     top: 53px;
-    width: 90%;
     padding-left: 97px;
+    padding-right: 97px;
     .ngVerticalBarVisible{
         width: 0;
     }
     .ngCellText{
-        border-bottom: 1px solid #cfcfcf;
+        border-bottom: 1px solid #E8E8E8;
         padding-top: 20px;
+        font-size: 12px;
+        color: #666;
      }
      .ngHeaderCell{
         border-bottom: 1px solid #afafaf;
      }
      .user-name{
         padding-top: 10px;
+        
      }
      .groups-name{
         padding-top: 10px;
+        font-size: 14px;
+        color: #000;
      }
      .action img{
         cursor: pointer;
@@ -43,10 +49,12 @@
         padding-left: 0px;
      }
      
-     .ngRow.even {     
+     .ngRow {     
          background-color: white;
       }
-      
+     .ngRow:hover {
+        background-color: #ebf1f7;
+      }
       .ngTopPanel {
         background-color: white;
       }
@@ -139,5 +147,10 @@
     .tooltip.bottom-right .tooltip-arrow{
       border-bottom-color: #ed9c3d;
     }
+
+  .control-label {
+    text-align: left;
+ 
+  }
 }
 
