--- a/src/admin/users/managedUsers/editUser/style.less
+++ b/src/admin/users/managedUsers/editUser/style.less
@@ -17,7 +17,7 @@
     margin-left: 5px;
   }
   .form-group {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   .user-name{
     width: 30%;
@@ -37,7 +37,10 @@
   }
 
   h4{
-    margin-top: 35px;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    font-weight: 700;
   }
 
   .permission-checkbox{
