--- a/src/admin/users/managedUsers/style.less
+++ b/src/admin/users/managedUsers/style.less
@@ -5,33 +5,38 @@
   }
   .buttonGroup{
       border-bottom: 1px solid #afafaf;
-      margin-left: 40px;
+      margin: 0 40px;
       padding-bottom: 9px;
       padding-left: 57px;
       padding-top: 9px;
-      width: 90%;
   }
   .gridStyle {
-    bottom: 40px;
-    left: 0;
     position: absolute;
+    bottom: 0;
+    left: 0;
     right: 0;
     top: 53px;
-    width: 90%;
-    padding-left: 97px;
+    padding: 0 97px;
     .ngVerticalBarVisible{
         width: 0;
     }
+    .ngHeaderSortColumn {
+
+    }
     .ngCellText{
-        border-bottom: 1px solid #cfcfcf;
+        border-bottom: 1px solid #E8E8E8;
         padding-top: 20px;
         padding-left: 0px;
+        font-size: 12px;
+        color: #666;
      }
      .ngHeaderCell{
          border-bottom: 1px solid #afafaf;
      }
      .user-name{
          padding-top: 10px;
+         font-size: 14px;
+         color: #000;
      }
      .action img{
          cursor: pointer;
@@ -41,12 +46,16 @@
          padding-left: 0px;
      }
      
-     .ngRow.even {     
-         background-color: white;
+     .ngRow {
+        background-color: white;
+      }
+      .ngRow:hover {
+        background-color: #ebf1f7;
       }
       
       .ngTopPanel {
         background-color: white;
+      
       }
      
      .activety{
@@ -84,21 +93,7 @@
   .empty{
       border: 1px solid red;
   }
-  
-//.tooltip-inner{            
-//    background-color: #1f69ba;
-// }
-//
-//.tooltip.in {
-//    filter: alpha(opacity=100);
-//    opacity: 1;
-// }
-// 
-//.tooltip-arrow{
-//    background-color: #1f69ba;
-// }
-  
-  
+   
   .tdroll{
       width: 140px;
   }
@@ -123,5 +118,24 @@
 
   input.ng-invalid.ng-dirty {
     border: 1px solid red;
+  }
+
+  .form-group {     margin-bottom: 5px;   } 
+
+  .control-label {
+    text-align: left;
+  }
+  .col-sm-8 {
+    padding-left: 0;
+  }
+
+  .indented {
+    margin-left: 100px;
+    margin-right: 15px;
+    .gridStyle {
+      padding: 0;
+      
+      border: 1px solid #E0E0E0;
+    }
   }
 }
