--- a/src/app/header/user-info/template.html
+++ b/src/app/header/user-info/template.html
@@ -60,7 +60,7 @@
     </div>
     <div class="form-group save-button">
       <div class="col-sm-10 col-sm-offset-1">
-        <input type="button" class="btn btn-primary form-control" ng-click="updateInfo()" value="保存修改">
+        <input type="button" class="btn btn-primary form-control" ng-click="updateInfo(userInfo)" value="保存修改">
         </input>
       </div>
     </div>
