no-message-notice

--- a/src/app/header/style.less
+++ b/src/app/header/style.less
@@ -140,6 +140,18 @@
                 overflow-y: hidden;
             }
             
+            .no-notice{
+                height: 280px;
+                width: 400px;
+                background: url('../../images/notice_empty.png') no-repeat;
+            }
+            .no-message{
+                height: 280px;
+                width: 400px;
+                background: url('../../images/message_empty.png') no-repeat;
+            }
+            
+            
             .notice-dropdown{
                 .dropdown-menu{
                     left: -340px;
