--- a/src/app/contacts/style.less
+++ b/src/app/contacts/style.less
@@ -1,3 +1,16 @@
+.contacts-view{
+    .scroller{
+        overflow-y: hidden;
+        bottom: 0;
+        left: 0;
+        margin-left: 0;
+        right: 0;
+        top: 46px;
+        position: absolute;
+    }
+}
+
+
 
 .top-bar{
   height: 45px;
