--- a/src/app/files/invite-team-users/template.html
+++ b/src/app/files/invite-team-users/template.html
@@ -61,7 +61,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-12">
-          <input type="button" class="btn btn-primary form-control" ng-click="createShare()" value="发送邀请"></input>
+          <input type="button" class="btn btn-primary form-control" ng-disabled="disableBtn"  ng-click="createShare()" value="发送邀请" >
         </div>
       </div>
     </form>
