--- a/src/admin/users/groups/style.less
+++ b/src/admin/users/groups/style.less
@@ -26,7 +26,7 @@
     .ngCellText{
         border-bottom: 1px solid #E8E8E8;
         padding-top: 20px;
-        font-size: 12px;
+        font-size: 14px;
         color: #666;
      }
      .ngHeaderCell{
@@ -38,8 +38,11 @@
      }
      .groups-name{
         padding-top: 10px;
-        font-size: 14px;
-        color: #000;
+        font-size: 15px;
+        color: #333;
+        img {
+          margin-right: 5px;
+        }
      }
      .action img{
         cursor: pointer;
