--- a/src/admin/users/managedUsers/style.less
+++ b/src/admin/users/managedUsers/style.less
@@ -27,7 +27,7 @@
         border-bottom: 1px solid #E8E8E8;
         padding-top: 20px;
         padding-left: 0px;
-        font-size: 12px;
+        font-size: 14px;
         color: #666;
      }
      .ngHeaderCell{
@@ -35,8 +35,11 @@
      }
      .user-name{
          padding-top: 10px;
-         font-size: 14px;
-         color: #000;
+         font-size: 15px;
+         color: #333;
+         img {
+           margin-right: 5px;
+         }
      }
      .action img{
          cursor: pointer;
