--- a/src/admin/global.less
+++ b/src/admin/global.less
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    font-family:Microsoft YaHei;
+    font-family: Arial, SimHei, Microsoft YaHei, sans-serif;
     background-color: @body-background-color;
     height: 100%;
     width: 100%;
