--- a/src/admin/users/externalUsers/style.less
+++ b/src/admin/users/externalUsers/style.less
@@ -26,8 +26,11 @@
     .ngCellText{
         border-bottom: 1px solid #E8E8E8;
         padding-top: 20px;
-        font-size: 12px;
+        font-size: 14px;
         color: #666;
+        img {
+          margin-right: 5px;
+        }
      }
      .ngHeaderCell{
         border-bottom: 1px solid #afafaf;
@@ -35,8 +38,8 @@
      .user-name{
         padding-top: 10px;
         padding-bottom: 9px;
-        font-size: 14px;
-        color: #000;
+        font-size: 15px;
+        color: #333;
      }
      .groups-name{
         padding-top: 10px;
