--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -25,6 +25,7 @@
     height: 65px;
     border-bottom: 1px solid #E8E8E8; 
     overflow: hidden;
+    font-size: 14px;
   }
   .file-row:hover{
       background-color: #ebf1f7;
@@ -128,7 +129,6 @@
            float: left;
            padding-top: 22px;
            padding-left: 5px;
-           font-size: 12px;
            color: #666; 
        }
        .file-sise-td{
@@ -136,7 +136,6 @@
            float: left;
            padding-top: 22px;
            padding-left: 8px; 
-           font-size: 12px;
            color: #666;
        }
        .permission-td{
@@ -144,7 +143,6 @@
            float: left;
            padding-left: 8px; 
            padding-top: 22px; 
-           font-size: 12px;
            color: #666;
        }
        .action-td{
@@ -153,8 +151,7 @@
            padding-top: 22px;
            padding-left: 8px;
            span{
-             margin-left: 3px;
-             font-size: 12px;
+             margin-left: 2px;
              color: #666;
            } 
        }
@@ -223,22 +220,25 @@
       white-space: nowrap;
       padding-left: 8px;
       padding-top: 5px;
+      font-size: 15px;
       a{
         color: #333;
-        font-weight: 500;
+        font-weight: 600;
       }
       a:hover{
         color: #1f69ba;
+        text-decoration: underline;
       }
     }
     .tag{
-      color: #fff;
+      color: #888;
       font-size: 10px;
       span{
         display: inline-block;       
-        background-color: #c2c2c2;
+        // background-color: #c2c2c2;
         padding: 1px 4px;
         border-radius: 1px;
+        border: 1px solid #E0E0E0;
       }
     }  
   }
@@ -293,7 +293,7 @@
         left: 0;
         margin-left: 0;
         right: 0;
-        top: 36px;
+        top: 46px;
         position: absolute;
     }
     .groups-users-header{
