--- a/src/app/header/template.html
+++ b/src/app/header/template.html
@@ -74,7 +74,7 @@
   </div>
   <div class="header-search" role="navigation">
     <div class="logo pull-left"></div>
-    <div class="search pull-left">
+    <div class="search">
       <input type="text" placeholder="搜索文件或者文件夹" class="search-text form-control" ng-model = "searchFilesValue" ng-keydown = "searchByKeyDown($event,searchFilesValue)">
       <button class="search-button btn btn-default" ng-click = "searchByButton(searchFilesValue)">
         搜索
