invited-scroll-bug

--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -593,6 +593,8 @@
             height: 76px;
             padding: 0;
             width: 92%;
+            position: relative;
+            overflow-y: hidden;
         }
         .dropdown{
           button{
