--- a/src/app/files/invite-team-users/template.html
+++ b/src/app/files/invite-team-users/template.html
@@ -24,7 +24,7 @@
       </div>
       <h5>已选取</h5>
       <div class="form-group">
-        <div class="col-sm-12 selected-groups-users">
+        <perfect-scrollbar class="selected-groups-users" wheel-propagation="true" wheel-speed="50" refresh-on-change="invitedList.userList" suppress-scroll-x = "true"> 
           <div class="selectedItem" ng-repeat="group in invitedList.groupList">
             <span class="selectedName">{{group.group_name}}</span>
             <span class="fa fa-times deleteSelected" ng-click = "deleteSelectedGroup(group)">x</span>
@@ -33,7 +33,7 @@
             <span class="selectedName">{{user.real_name}}</span>
             <span class="fa fa-times deleteSelected" ng-click = "deleteSelectedUser(user)">x</span>
           </div>
-        </div>
+        </perfect-scrollbar>
       </div>
       <h5>访问权限</h5>
       <div class="form-group">
