--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -302,6 +302,16 @@
       margin-bottom: 10px;
       color: #555;
       background-color: #E8ECF0;
+      .invite{
+        background: url("../../images/file_invite_contact_btn_off.png") no-repeat scroll rgba(0, 0, 0, 0);
+        cursor: pointer;
+        height: 17px;
+        width: 20px;
+        margin-top: 10px;
+      }
+      .invite:hover{
+        background: url("../../images/file_invite_contact_btn_pressed.png") no-repeat scroll rgba(0, 0, 0, 0);  
+      }
       a{
         cursor: pointer;
         text-decoration: none;
