--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -181,7 +181,7 @@
 	<div class="groups-users" ng-hide = "isRoot">
 		<div class="groups-users-header col-sm-12">
 			<span class="pull-left">全部协作人({{shareObj.user_count}})</span>
-			<a class="pull-right" ng-click = "inviteTeamUsers()">邀请协作人</a>
+			<div class="pull-right invite" ng-click = "inviteTeamUsers()"></div>
 		</div>
 		<perfect-scrollbar class="scroller" wheel-propagation="true" wheel-speed="50" refresh-on-change="shareObj.list.users">
 		<div class="groups col-sm-12" ng-repeat="group in groups" >
