floder hide discuss_menu

--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -127,8 +127,8 @@
 									重命名
 								</a>
 							</li>
-							<li>
-								<a ng-click="openUserDiscuss(checkedObj.file_id)" class="large button">
+							<li ng-show = "show_discuss_menu">
+								<a ng-click="openUserDiscuss(checkedObj)" class="large button">
 									讨论
 								</a>
 							</li>
