--- a/src/app/files/invite-team-users/template.html
+++ b/src/app/files/invite-team-users/template.html
@@ -9,7 +9,7 @@
     <form role="form" class="form-horizontal invite-content" ng-class="{'col-sm-12':!broad, 'col-sm-8':broad}">
       <div class="form-group input-from-group">
         <div class="col-sm-12">
-          <input type="name" class="form-control" name="username" placeholder="输入姓名或者邮箱" ng-model="inviteInputValue" ng-enter="inviteBypress(inviteInputValue)">
+          <input type="name" class="form-control" name="username" placeholder="输入邮箱回车邀请外部用户" ng-model="inviteInputValue" ng-enter="inviteBypress(inviteInputValue)">
         </div>
       </div>
       <div class="form-group or-from-group">
