--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -287,6 +287,24 @@
     right: 0;
     top: 0;
     bottom: 0;
+    .h4_add_guide{
+        width: 100%;
+    }
+    .add_guide{
+        width: 100%;
+        margin-left: 20px;
+        height: 310px;
+        background: url("../../images/web_main_guide_add.png") no-repeat scroll rgba(0, 0, 0, 0);
+    }
+    .h4_add_link{
+        width: 100%;
+    }
+    .add_link{
+        width: 100%;
+        height: 310px;
+        margin-left: 5px;
+        background: url("../../images/web_main_guide_link.png") no-repeat scroll rgba(0, 0, 0, 0);
+    }
     .scroller{
         overflow-y: hidden;
         bottom: 0;
@@ -748,7 +766,7 @@
     }
     .upload-new-version{
         float: right;
-        padding: 4px 6px;
+        padding: 1px 3px;
     }
     .preview-view{
         height: 100%;
@@ -808,13 +826,15 @@
                }
             }
         }
-        .discuss{
+        .scroller {
           position: absolute;
           top: 30px;
           left: 15px;
           right: 0;
           bottom: 110px;
-          overflow-y: auto;
+          overflow-y: hidden;
+        }
+        .discuss{
           .disc-item{
             padding: 10px;
             img{
@@ -834,11 +854,41 @@
           }
         }
         
+        .version{
+            position: absolute;
+            top: 30px;
+            left: 15px;
+            right: 0;
+            bottom: 0;
+            overflow-y: hidden;
+            overflow-x: hidden;
+            padding-right: 15px;
+            .version-item{
+                height: 40px;
+                border-bottom: 1px solid #e5e5e5;
+                .row{
+                    margin: 0;
+                }
+                .version-action{
+                    cursor: pointer;
+                    width: 19px;
+                    height: 17px;
+                    background: url("../../images/download_btn_off.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);;
+                }
+                .version-action:hover{
+                    background: url("../../images/download_btn_on.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);;
+                }
+            }
+        }
         
         .disc-inputbox{
           bottom: 0;
           height: 100px;
           position: absolute;
+          label{
+              margin-top: 8px;
+              margin-right: 5px;
+          }
         }
     }
 }
