folder no download

--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -122,7 +122,7 @@
 									移动
 								</a>
 							</li>
-							<li>
+							<li ng-show = "show_download_menu">
 								<a class="pointer" role="menuitem" tabindex="4" ng-click="renameFileForm()">
 									重命名
 								</a>
