--- a/src/app/files/template.html
+++ b/src/app/files/template.html
@@ -178,10 +178,12 @@
 		<div class="groups-users-header col-sm-12">
       <span class="pull-left">全新的分享方式 </span>
     </div>
-    <div class="h4_add_guide pull-left col-sm-12">协作分享</div>
-    <div class="add_guide pull-left col-sm-12"></div>
-    <div class="h4_add_link pull-left col-sm-12">链接分享</div>
-    <div class="add_link pull-left col-sm-12"></div>
+    <perfect-scrollbar class="empty-scroller" wheel-propagation="true" wheel-speed="50" suppress-scroll-x = "true">
+      <div class="h4_add_guide pull-left col-sm-12">协作分享</div>
+      <div class="add_guide pull-left col-sm-12"></div>
+      <div class="h4_add_link pull-left col-sm-12">链接分享</div>
+      <div class="add_link pull-left col-sm-12"></div>
+    </perfect-scrollbar>
 	</div>
 	
 	<div class="groups-users" ng-hide = "isRoot">
