--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -289,24 +289,40 @@
     bottom: 0;
     .h4_add_guide{
         width: 100%;
+        border-bottom: 1px solid #e8e8e8;
+        padding: 0;
+        margin-left: 15px;
     }
     .add_guide{
         width: 100%;
         margin-left: 20px;
-        height: 310px;
+        height: 305px;
         background: url("../../images/web_main_guide_add.png") no-repeat scroll rgba(0, 0, 0, 0);
     }
     .h4_add_link{
         width: 100%;
+        border-bottom: 1px solid #e8e8e8;
+        padding: 0;
+        margin-left: 15px;
     }
     .add_link{
         width: 100%;
-        height: 310px;
-        margin-left: 5px;
+        height: 250px;
+        margin-left: 20px;
         background: url("../../images/web_main_guide_link.png") no-repeat scroll rgba(0, 0, 0, 0);
     }
     .scroller{
         overflow-y: hidden;
+        bottom: 0;
+        left: 0;
+        margin-left: 0;
+        right: 0;
+        top: 46px;
+        position: absolute;
+    }
+    .empty-scroller{
+        overflow-y: hidden;
+        overflow-x: hidden;
         bottom: 0;
         left: 0;
         margin-left: 0;
