--- a/src/app/files/style.less
+++ b/src/app/files/style.less
@@ -253,7 +253,9 @@
     background-position: 0px -38px;
     height:19px;
     width: 16px;
-    cursor: pointer;  
+    &.is_edit{
+       cursor: pointer; 
+    }  
   }
   .share-ico{
     float: left;
@@ -261,8 +263,10 @@
     background-position: 0px 0px;
     height:19px;
     width: 16px;
-    cursor: pointer;
-    margin-left: 10px;  
+    margin-left: 10px;
+    &.is_edit{
+       cursor: pointer; 
+    }  
   }
   .discuss-ico{
     float: left;  
@@ -502,15 +506,51 @@
             line-height: 24px;
         }
     }
+    .users.is_owner .user-permission span{
+        cursor: auto;
+    }
+    .users.not_edit .user-permission span{
+        cursor: auto;
+    }
+    
+    .users.is_owner{
+        .dropdown-menu{
+            display: none;
+        }
+    }
+    .users.not_edit{
+        .dropdown-menu{
+            display: none;
+        }
+    }
+    
     .users:hover{
-            background-color: #ebf1f7;
-        }
-        .users:hover .caret{
-            display: inline-block;
-        }
-        .users:hover .delete-user{
-            display: inline-block;
-        }
+        background-color: #ebf1f7;
+    }
+    .users.is_owner:hover{
+        background-color : white;
+    }
+    .users.not_edit:hover{
+        background-color : white;
+    }
+    .users:hover .caret{
+        display: inline-block;
+    }
+    .users:hover .delete-user{
+        display: inline-block;
+    }
+    .users.is_owner:hover .caret{
+        display: none;
+    }  
+    .users.is_owner:hover .delete-user{
+        display: none;
+    }
+    .users.not_edit:hover .caret{
+        display: none;
+    }  
+    .users.not_edit:hover .delete-user{
+        display: none;
+    }
     .arrows-img{
         background: url("../../images/arrows.png") no-repeat scroll rgba(0, 0, 0, 0);
         background-position: 0 -69px;
